# network-graph

./: .gitignore  CLAUDE.md  DECISIONS.md  Makefile  Network_Graph_User_Guide.docx  OPEN_QUESTIONS.md  README.md  demo_narration.txt  demo_voiceover.txt  docker-compose.yml  kmeans.xlsx  render.yaml
.devcontainer/: devcontainer.json
backend/: Dockerfile  build.sh  load_data.py  pyproject.toml  requirements.txt  run_detections.py  setup.py  start.sh
backend/api/: database.py  main.py  models.py
backend/network_graph_core/: __init__.py  __main__.py  config.py  synthetic.py  zip_lookup.py
backend/network_graph_core/detectors/: __init__.py  doctor_shopping.py  geo_anomaly.py  network_buckets.py  pharmacy_hubs.py  suspicious_fills.py
backend/sql/ddl/: 001_schema.sql  002_dimensions.sql  003_facts.sql  004_detection.sql  005_views.sql
backend/sql/procs/: sp_doctor_shopping.sql  sp_geo_anomaly.sql  sp_network_buckets.sql  sp_pharmacy_hubs.sql  sp_suspicious_fills.sql
backend/sql/seed/: 001_config_rules.sql  002_controlled_drugs.sql
backend/tests/: conftest.py  test_config.py  test_doctor_shopping.py  test_geo_anomaly.py  test_network_buckets.py  test_pharmacy_hubs.py  test_suspicious_fills.py
docs/: 20260331 Sample_HIX_E2E_Scenario (Anil).xlsx  CRQ_1290_UC9 1.xlsx  PRSD_Updates_to_Renewals_v5.docx  architecture.md  network-graph-prompt.md  powerbi.md
frontend/: .eslintrc.cjs  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.tsx  index.css
frontend/src/components/: KpiCards.tsx  RiskBadge.tsx
scripts/: smoke_test.py
(+6 files in other folders)
